objects/Asset.object
<CustomObject><fields>
        <fullName>Asset_Combo__c</fullName>
        <formula>Name&amp;"  -  DOP:  "&amp;TEXT(InstallDate)&amp;"  Ser #:  "&amp;SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Combo</label>
        <type>Text</type>
    </fields><fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>300</defaultValue>
        <description>This is used for the "Perfect Data" SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Entitelemt_Indicator__c</fullName>
        <formula>IMAGE( "/servlet/servlet.FileDownload?file=" &amp;CASE( Entitlement_Status__c, 
"Expired", "01541000001Qwud", 
"Active", "01541000001Qwub", 
"30 Day Warning", "01541000001Qwuc",
"01541000001Qwub"),"Active Contract?",22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Entitlement_Status__c</fullName>
        <label>Warranty Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Day Warning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(  Product2.purl__c   , "No Image", 50, 85)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Scheduled_Servicing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the asset should have recurring scheduled servicing take place</description>
        <label>Scheduled Servicing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Service_Frequency_Weeks__c</fullName>
        <description>If an asset is flagged for servicing, how often should it be serviced</description>
        <label>Service Frequency (Weeks)</label>
        <picklist>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Suggested_Products__c</fullName>
        <label>Suggested Products</label>
        <picklist>
            <picklistValues>
                <fullName>Product 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>Entitelemt_Indicator__c</columns>
        <columns>Entitlement_Status__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All_Consumer_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Entitelemt_Indicator__c</columns>
        <columns>Entitlement_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Consumer_Asset</value>
        </filters>
        <label>All Consumer Assets</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All_Enterprise_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>ASSET.PARENT</columns>
        <columns>Entitelemt_Indicator__c</columns>
        <columns>Entitlement_Status__c</columns>
        <columns>Scheduled_Servicing__c</columns>
        <columns>Service_Frequency_Weeks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Enterprise_Asset</value>
        </filters>
        <label>All Enterprise Assets</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>Consumer_Asset</fullName>
        <active>true</active>
        <description>Consumer assets generally sold in B2C scenarios</description>
        <label>Consumer Asset</label>
    </recordTypes><recordTypes>
        <fullName>Enterprise_Asset</fullName>
        <active>true</active>
        <description>Enterprises Assets generally sold in B2B model</description>
        <label>Enterprise Asset</label>
    </recordTypes></CustomObject>